<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/card"
              android:paddingBottom="64dp"
        >
    <com.lashgo.android.ui.views.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_btn_normal"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            app:fontName="@string/medium"
            android:text="@string/i_want"
            />
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:layout_marginTop="48dp"
            android:id="@+id/take_pictute_layout"
            android:background="@drawable/btn_gray_bg"
            >

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/ic_take_picture"
                   android:duplicateParentState="true"
                />
        <com.lashgo.android.ui.views.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/btn_gray_text"
                android:textSize="14sp"
                android:layout_marginLeft="12dp"
                app:fontName="@string/medium"
                android:text="@string/take_picture"
                />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/choose_from_gallery_layout"
            android:layout_width="match_parent" android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/btn_gray_bg"
            >

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/ic_choose_photo"
                   android:duplicateParentState="true"
                />
        <com.lashgo.android.ui.views.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/btn_gray_text"
                android:textSize="14sp"
                android:layout_marginLeft="12dp"
                app:fontName="@string/medium"
                android:text="@string/choose_from_gallery"
                />
    </LinearLayout>
</LinearLayout>