<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/username_normal"
        >
    <FrameLayout android:layout_width="match_parent" android:layout_height="56dp"
                 android:background="@color/main_color"
            >
        <ImageView
                android:id="@+id/close_btn"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="16dp"
                android:src="@drawable/close_drawable"
                />
    </FrameLayout>
    <ImageView
            android:id="@+id/sent_photo"
            android:layout_width="match_parent" android:layout_height="296dp"
            android:layout_marginTop="8dp"
            />
    <com.lashgo.android.ui.views.RobotoTextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:text="@string/cheers"
                                                android:layout_marginLeft="32dp"
                                                android:layout_marginTop="27dp"
                                                android:textSize="24sp"
                                                app:fontName="@string/regular"
            />
    <com.lashgo.android.ui.views.RobotoTextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:text="@string/photo_sent"
                                                android:layout_marginLeft="32dp"
                                                android:layout_marginTop="19dp"
                                                android:textSize="16sp"
                                                app:fontName="@string/regular"
            />
</LinearLayout>