<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout android:layout_width="match_parent" android:layout_height="240dp"
                 android:background="@drawable/bg_profile_after_reg"
                 android:paddingTop="@dimen/action_bar_height"
            >
        <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="64dp" android:layout_height="64dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ava"
                />
    </FrameLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp"
                 android:layout_weight="1"
                 android:background="@color/bg_after_reg_bottom"
            >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                >
            <com.lashgo.android.ui.views.RobotoTextView android:layout_width="wrap_content"
                                                        android:layout_height="match_parent"
                                                        android:layout_marginLeft="32dp"
                                                        android:layout_marginTop="42dp"
                                                        android:text="@string/congratulations"
                                                        app:fontName="@string/regular"
                                                        android:textSize="24sp"
                                                        android:textColor="@color/black"
                    />
            <com.lashgo.android.ui.views.RobotoTextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="13dp"
                    app:fontName="@string/regular"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    />
            <com.lashgo.android.ui.views.RobotoTextView android:layout_width="wrap_content"
                                                        android:layout_height="match_parent"
                                                        android:layout_marginLeft="32dp"
                                                        android:layout_marginTop="20dp"
                                                        app:fontName="@string/regular"
                                                        android:textSize="16sp"
                                                        android:textColor="@color/black"
                                                        android:text="@string/now_you_are_with_us"
                    />
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="44dp"
                      android:orientation="horizontal"
                      android:layout_gravity="bottom|left"
                      android:layout_marginBottom="32dp"
                      android:layout_marginLeft="16dp"
                >
            <com.lashgo.android.ui.views.RobotoButton android:layout_width="190dp"
                                                      android:layout_height="match_parent"
                                                      android:id="@+id/fill_profile"
                                                      android:text="@string/fill_profile"
                                                      android:gravity="center"
                                                      app:fontName="@string/medium"
                                                      android:textSize="14sp"
                                                      android:textColor="@drawable/btn_pink_text"
                                                      android:background="@drawable/btn_pink_bg"
                    />
            <com.lashgo.android.ui.views.RobotoButton android:layout_width="130dp"
                                                      android:layout_height="match_parent"
                                                      android:id="@+id/continue_register"
                                                      android:text="@string/continue_register"
                                                      android:gravity="center"
                                                      android:textColor="@drawable/btn_gray_text"
                                                      android:background="@drawable/btn_gray_bg"
                                                      app:fontName="@string/medium"
                                                      android:textSize="14sp"
                    />
        </LinearLayout>
        <include layout="@layout/view_ab_shadow"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:layout_gravity="top"
                />
    </FrameLayout>
</LinearLayout>
