<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingTop="8dp"
                  android:paddingLeft="12dp"
                  android:paddingBottom="12dp"
                  android:gravity="center_horizontal"
            >
        <FrameLayout android:layout_width="48dp" android:layout_height="48dp">
            <com.lashgo.android.ui.views.GradientImageView
                    android:id="@+id/check_gradient"
                    android:layout_width="48dp" android:layout_height="48dp"
                    android:layout_gravity="center"
                    app:gradStrokeWidth="2dp"
                    />
            <ImageView
                    android:id="@+id/task_photo"
                    android:layout_width="40dp" android:layout_height="40dp"
                    android:layout_gravity="center"
                    />
        </FrameLayout>

        <com.lashgo.android.ui.views.RobotoTextView
                android:id="@+id/vote_time"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:fontName="@string/condensed_regular"
                android:textSize="12sp"
                android:textColor="@color/pink"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="0dp" android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_weight="1"
                  android:paddingTop="14dp"
                  android:paddingLeft="12dp"
                  android:paddingBottom="14dp"
                  android:paddingRight="12dp"
            >
        <com.lashgo.android.ui.views.RobotoTextView
                android:id="@+id/check_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontName="@string/medium"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
        <com.lashgo.android.ui.views.RobotoTextView
                android:id="@+id/check_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:fontName="@string/regular"
                android:textSize="14sp"
                android:textColor="@color/vote_check_description_color"
                />
    </LinearLayout>
</LinearLayout>