<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/container"
        >
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_check"
            android:paddingTop="@dimen/action_bar_height"
            android:paddingBottom="16dp"
            >
        <Space android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
                />
        <com.lashgo.android.ui.views.RobotoTextView
                android:id="@+id/check_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:fontName="@string/condensed_regular"
                android:textSize="24sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/check_name_color"
                />
        <Space android:layout_width="match_parent" android:layout_height="0dp"
               android:layout_weight="1"
                />
        <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:id="@+id/check_layout"
                >
            <com.lashgo.android.ui.views.PagerContainer
                    android:id="@+id/pager_container"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                <android.support.v4.view.ViewPager
                        android:id="@+id/check_pager"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginLeft="65dp"
                        android:layout_marginRight="65dp"
                        android:layout_gravity="center_horizontal|top"/>
            </com.lashgo.android.ui.views.PagerContainer>
            <ImageView
                    android:id="@+id/btn_action"
                    android:layout_width="62dp" android:layout_height="62dp"
                    android:layout_gravity="top|right"
                    android:layout_marginRight="74dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/btn_camera"
                    android:visibility="gone"
                    />
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:id="@+id/vote_layout"
                          android:layout_gravity="bottom"
                          android:gravity="center_horizontal"
                          android:layout_marginBottom="100dp"
                          android:visibility="gone"
                    >
                <com.lashgo.android.ui.views.RobotoTextView android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            android:text="@string/vote_is_going"
                                                            android:gravity="center_horizontal"
                                                            android:textSize="18sp"
                                                            android:textColor="@color/white"
                                                            app:fontName="@string/regular"
                        />
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/vote_time_layout"
                        android:gravity="center_vertical"
                        android:layout_marginTop="43dp"
                        >
                    <ImageView android:layout_width="21dp" android:layout_height="21dp"
                               android:src="@drawable/white_clock"
                            />
                    <com.lashgo.android.ui.views.RobotoTextView
                            android:id="@+id/vote_check_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            app:fontName="@string/condensed_regular"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:text="11:24"
                            />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
        <Space android:layout_width="match_parent" android:layout_height="0dp"
               android:layout_weight="1"
                />
        <com.lashgo.android.ui.views.RobotoTextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:gravity="center_horizontal"
                android:maxLines="4"
                android:ellipsize="end"
                app:fontName="@string/condensed_regular"
                android:textSize="18sp"
                android:textColor="@color/check_description_color_2"
                />

        <com.lashgo.android.ui.views.RobotoTextView
                android:id="@+id/win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:gravity="center_horizontal"
                app:fontName="@string/condensed_regular"
                android:textSize="24sp"
                android:textColor="@color/drawer_item_counter_pressed"
                android:text="@string/win"
                android:visibility="gone"
                />
        <Space android:layout_width="match_parent" android:layout_height="0dp"
               android:layout_weight="1"
                />
        <include layout="@layout/view_check_bottom_panel"/>
    </LinearLayout>
    <include layout="@layout/dialog_progress"/>
    <View
            android:id="@+id/shadow"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:background="@color/darkening"
            android:visibility="gone"
            />
    <ImageView
            android:id="@+id/expanded_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            />
</FrameLayout>